--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,8 @@
   // --body-background: #4E4E4E; // Teste 
   --color-pink: rgba(237, 20, 91, 1);
   --color-white: rgba(255, 255, 255, 1);
+
+  --font-pt-sans: "PT Sans", sans-serif;
 }
 
 * {
