--- a/src/components/Styles.scss
+++ b/src/components/Styles.scss
@@ -128,7 +128,7 @@
 
   .courses-section-content {
     width: 60%;
-    
+
     display: flex;
     flex-direction: column;
 
@@ -193,6 +193,85 @@
 
 }
 
+.faq-section-container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+
+  header {
+    div {
+      h1 {
+        font-size: 5.75rem;
+      }
+
+      p {
+        font-size: 1.375rem;
+        color: var(--color-pink);
+      }
+    }
+  }
+
+  .faq-section-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+
+    .card {
+      width: 20rem;
+      height: 10rem;
+      padding: 2rem 0;
+
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      position: relative;
+      cursor: pointer;
+
+      transition: .5s ease-in-out;
+      flex: 1 1 calc(33.333% - 1rem);
+      h1 {
+        font-size: 1.25rem;
+      }
+
+      p {
+        font-size: 1rem;
+        color: rgba(148, 155, 153, 1);
+        opacity: 0;
+        transition: 0.5s;
+      }
+
+      &::before {
+        width: 25%;
+        height: 1px;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: ' ';
+        transition: .2s ease-in-out;
+        background-color: rgba(138, 149, 155, 1);
+      }
+
+      &:hover {
+        transform: translateY(-1%);
+
+        p {
+          opacity: 1;
+        }
+
+        &::before {
+          width: 100%;
+          background-color: var(--color-pink);
+        }
+      }
+    }
+
+
+  }
+}
 
 @keyframes move-rtl {
   0% {
@@ -351,5 +430,50 @@
     }
 
 
+  }
+
+  .faq-section-container {
+    width: 95%;
+    transition: 0s;
+
+    .faq-section-content {
+      transition: 0s;
+      gap: 1rem;
+
+      .card {
+        flex: 1 1 calc(100% - 1rem);
+        height: 6rem;
+        transition: 0;
+        transition: 0s ease-in-out;
+
+        p {
+          display: none;
+
+        }
+
+        &::before {
+          width: 25%;
+          height: 1px;
+
+          position: absolute;
+          top: 0;
+          left: 0;
+          content: ' ';
+          transition: 0s ease-in-out;
+          background-color: rgba(138, 149, 155, 1);
+        }
+
+        &:hover {
+          height: 7rem;
+          transform: translateY(0);
+
+          p {
+            display: flex;
+          }
+        }
+      }
+
+
+    }
   }
 }
