--- a/src/components/Styles.scss
+++ b/src/components/Styles.scss
@@ -70,8 +70,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    // background-color: green;
-
     div {
       h1 {
         font-size: 5.75rem;
@@ -217,12 +215,12 @@
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
-
+    gap: 1rem;
     .card {
       width: 20rem;
       height: 10rem;
       padding: 2rem 0;
-
+      // background-color: red;
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -244,7 +242,7 @@
       }
 
       &::before {
-        width: 25%;
+        width: 15%;
         height: 1px;
 
         position: absolute;
