--- a/src/components/Styles.scss
+++ b/src/components/Styles.scss
@@ -1,3 +1,4 @@
+// Header
 .header-container {
   width: 100vw;
   height: 5rem;
@@ -24,7 +25,6 @@
       height: 40px;
       cursor: pointer;
     }
-
   }
 
   .border {
@@ -47,7 +47,6 @@
   overflow: hidden;
   white-space: nowrap;
 
-
   h1 {
     font-size: 48px;
     text-transform: uppercase;
@@ -64,12 +63,11 @@
   display: flex;
   flex-direction: column;
 
-
-
   header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     div {
       h1 {
         font-size: 5.75rem;
@@ -89,7 +87,6 @@
         li {
           list-style: none;
           cursor: pointer;
-
           color: #8A959B;
 
           position: relative;
@@ -98,13 +95,12 @@
           &::before {
             width: 0%;
             height: 6px;
-
             content: "";
 
             position: absolute;
             top: -10px;
             left: 0;
-            transition: .5s;
+            transition: 0.5s;
             background-color: var(--color-pink);
           }
 
@@ -138,7 +134,6 @@
       h1 {
         font-size: 3.438rem;
         margin: 3rem 0;
-        // background-color: red;
       }
 
       div {
@@ -156,7 +151,6 @@
 
         :nth-child(1) {
           font-family: var(--font-pt-sans);
-          // background-color: red;
         }
 
         :nth-child(2) {
@@ -173,7 +167,7 @@
           position: absolute;
           bottom: -30px;
           left: 0;
-          transition: .5s;
+          transition: 0.5s;
           background-color: var(--color-white);
         }
       }
@@ -187,8 +181,6 @@
   .accordion-mobile {
     display: none;
   }
-
-
 }
 
 .faq-section-container {
@@ -216,20 +208,21 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 1rem;
+
     .card {
       width: 20rem;
       height: 10rem;
       padding: 2rem 0;
-      // background-color: red;
+
       display: flex;
       flex-direction: column;
       gap: 1rem;
 
       position: relative;
       cursor: pointer;
-
-      transition: .5s ease-in-out;
+      transition: 0.5s ease-in-out;
       flex: 1 1 calc(33.333% - 1rem);
+
       h1 {
         font-size: 1.25rem;
       }
@@ -249,7 +242,7 @@
         top: 0;
         left: 0;
         content: ' ';
-        transition: .2s ease-in-out;
+        transition: 0.2s ease-in-out;
         background-color: rgba(138, 149, 155, 1);
       }
 
@@ -266,8 +259,6 @@
         }
       }
     }
-
-
   }
 }
 
@@ -290,7 +281,6 @@
     transform: translateX(-0%);
   }
 }
-
 
 // Estilos para dispositivos móveis com largura máxima de 900px
 @media(max-width: 900px) {
@@ -320,7 +310,6 @@
     }
 
     .accordion-mobile {
-      // background-color: red;
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -340,7 +329,6 @@
           button {
             width: 50px;
             height: 50px;
-
             border-radius: 100%;
 
             display: flex;
@@ -348,12 +336,10 @@
             align-items: center;
 
             font-size: 1.5rem;
-
             color: white;
             cursor: pointer;
 
             position: relative;
-
             transition: background-color 0.3s ease, border-color 0.3s ease;
 
             &::before,
@@ -363,7 +349,6 @@
               content: '';
 
               position: absolute;
-
               transition: transform 0.3s ease;
               background-color: var(--color-pink);
             }
@@ -401,13 +386,11 @@
               background-color: var(--color-pink);
             }
           }
-
         }
 
         .accordion-content {
           display: flex;
           flex-direction: column;
-
 
           .accordion-description {
             padding: 2rem 0;
@@ -422,12 +405,8 @@
             }
           }
         }
-
-        // background-color: green;
       }
     }
-
-
   }
 
   .faq-section-container {
@@ -446,7 +425,6 @@
 
         p {
           display: none;
-
         }
 
         &::before {
@@ -470,8 +448,6 @@
           }
         }
       }
-
-
     }
   }
 }
