--- a/src/components/Styles.scss
+++ b/src/components/Styles.scss
@@ -127,6 +127,7 @@
     flex-direction: column;
 
     .categories {
+      
       display: none;
       gap: 1rem;
       flex-direction: column;
@@ -137,8 +138,9 @@
       }
 
       div {
-        margin-bottom: 3rem;
-
+        padding: 2rem 0 ;
+        
+        
         display: flex;
         align-items: center;
         gap: 2rem;
@@ -147,6 +149,7 @@
 
         p {
           color: rgba(138, 149, 155, 1);
+          
         }
 
         :nth-child(1) {
@@ -165,16 +168,26 @@
           content: "";
 
           position: absolute;
-          bottom: -30px;
+          bottom: -7px;
           left: 0;
           transition: 0.5s;
           background-color: var(--color-white);
+        }
+          &:hover{
+         p{
+          color: var(--color-pink);
+         }
+          &::before {
+            background-color: var(--color-pink);
+          }
         }
       }
 
       &.visible {
         display: flex;
       }
+
+      
     }
   }
 
@@ -187,7 +200,7 @@
   width: 80%;
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 7rem;
 
   header {
     div {
@@ -207,21 +220,22 @@
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 2rem;
 
     .card {
-      width: 20rem;
-      height: 10rem;
+      width: 10rem;
+      height: 7.5rem;
       padding: 2rem 0;
 
+      flex: 1 1 calc(33.333% - 2rem);
       display: flex;
       flex-direction: column;
       gap: 1rem;
 
       position: relative;
       cursor: pointer;
+
       transition: 0.5s ease-in-out;
-      flex: 1 1 calc(33.333% - 1rem);
 
       h1 {
         font-size: 1.25rem;
@@ -262,6 +276,91 @@
   }
 }
 
+footer {
+  // background-color: red;
+  padding: 10rem 2rem 2rem 2rem; //top - right - botton - left
+
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+
+    div {
+      display: flex;
+      flex-direction: column;
+      gap: .5rem;
+
+      &:nth-of-type(3) {
+        padding-right: 8rem;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: var(--color-pink);
+      }
+
+      p {
+        cursor: pointer;
+        font-size: .8rem;
+        color: #8A959B;
+        transition: 0.5s;
+
+        &:hover {
+          color: var(--color-white);
+        }
+      }
+    }
+  }
+
+  .lets-rock-the-future {
+    padding: 5rem 1rem;
+    // background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      font-size: 6rem;
+      font-weight: 600;
+
+      background: linear-gradient(90deg, transparent, rgb(255, 255, 255), transparent);
+      background-size: 400%;
+      opacity: 0.5;
+      letter-spacing: 7px;
+      color: transparent;
+      -webkit-text-stroke-width: 1px;
+      -webkit-text-stroke-color: #fff;
+      -webkit-background-clip: text;
+
+
+      // background: linear-gradient(90deg, transparent, white);
+      background-clip: text;
+      // position: relative;
+
+      animation: animateGradient 10s linear infinite;
+
+    }
+  }
+
+  .footer {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      font-size: 1.2rem;
+      font-weight: 700;
+    }
+
+    p {
+      color: #8A959B;
+    }
+  }
+}
+
 @keyframes move-rtl {
   0% {
     transform: translateX(0%);
@@ -279,6 +378,20 @@
 
   100% {
     transform: translateX(-0%);
+  }
+}
+
+@keyframes animateGradient {
+  0% {
+    background-position: -0%;
+  }
+
+  50% {
+    opacity: 0.1;
+  }
+
+  100% {
+    background-position: 100%;
   }
 }
 
@@ -448,6 +561,94 @@
           }
         }
       }
+    }
+  }
+
+  footer {
+    // background-color: red;
+    padding: 10rem 2rem 2rem 2rem; //top - right - botton - left
+
+    header {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+
+      div {
+        width: 70%;
+        display: flex;
+        align-items: start;
+        // background-color: red;
+        flex-direction: column;
+        gap: .5rem;
+
+        &:nth-of-type(3) {
+          padding-right: 0;
+        }
+
+        h1 {
+          font-size: 1.5rem;
+          font-weight: 400;
+          color: var(--color-pink);
+        }
+
+        p {
+          cursor: pointer;
+          font-size: .8rem;
+          color: #8A959B;
+          transition: 0.5s;
+
+          &:hover {
+            color: var(--color-white);
+          }
+        }
+      }
+    }
+
+    .lets-rock-the-future {
+      padding: 5rem 1rem;
+      // background-color: red;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      h1 {
+        font-size: 2rem;
+        font-weight: 600;
+
+        background: linear-gradient(90deg, transparent, rgb(255, 255, 255), transparent);
+        background-size: 400%;
+        opacity: 0.5;
+        letter-spacing: 7px;
+        color: transparent;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: #fff;
+        -webkit-background-clip: text;
+
+
+        // background: linear-gradient(90deg, transparent, white);
+        background-clip: text;
+        // position: relative;
+
+        animation: animateGradient 10s linear infinite;
+
+      }
+    }
+
+    .footer {
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      h1 {
+        font-size: 1.2rem;
+        font-weight: 700;
+      }
+
+      p {}
     }
   }
 }
