--- a/src/components/Styles.scss
+++ b/src/components/Styles.scss
@@ -62,6 +62,7 @@
   width: 80%;
   display: flex;
   flex-direction: column;
+  gap: 3rem;
 
   header {
     display: flex;
@@ -75,6 +76,7 @@
 
       p {
         font-size: 1.375rem;
+        font-weight: 300;
         color: var(--color-pink);
       }
     }
@@ -127,9 +129,9 @@
     flex-direction: column;
 
     .categories {
-      
+
       display: none;
-      gap: 1rem;
+      // gap: 1rem;
       flex-direction: column;
 
       h1 {
@@ -138,9 +140,9 @@
       }
 
       div {
-        padding: 2rem 0 ;
-        
-        
+        padding: 2rem 0;
+
+
         display: flex;
         align-items: center;
         gap: 2rem;
@@ -149,7 +151,7 @@
 
         p {
           color: rgba(138, 149, 155, 1);
-          
+
         }
 
         :nth-child(1) {
@@ -168,15 +170,17 @@
           content: "";
 
           position: absolute;
-          bottom: -7px;
+          bottom: 5px;
           left: 0;
           transition: 0.5s;
           background-color: var(--color-white);
         }
-          &:hover{
-         p{
-          color: var(--color-pink);
-         }
+
+        &:hover {
+          p {
+            color: var(--color-pink);
+          }
+
           &::before {
             background-color: var(--color-pink);
           }
@@ -187,7 +191,7 @@
         display: flex;
       }
 
-      
+
     }
   }
 
@@ -203,13 +207,21 @@
   gap: 7rem;
 
   header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
     div {
+      display: flex;
+      flex-direction: column;
+
       h1 {
-        font-size: 5.75rem;
+        font-size: 3.25rem;
       }
 
       p {
-        font-size: 1.375rem;
+        font-size: 1.125rem;
+        font-weight: 300;
         color: var(--color-pink);
       }
     }
@@ -277,7 +289,6 @@
 }
 
 footer {
-  // background-color: red;
   padding: 10rem 2rem 2rem 2rem; //top - right - botton - left
 
   header {
@@ -315,7 +326,7 @@ footer {
 
   .lets-rock-the-future {
     padding: 5rem 1rem;
-    // background-color: red;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -333,10 +344,7 @@ footer {
       -webkit-text-stroke-color: #fff;
       -webkit-background-clip: text;
 
-
-      // background: linear-gradient(90deg, transparent, white);
       background-clip: text;
-      // position: relative;
 
       animation: animateGradient 10s linear infinite;
 
@@ -525,17 +533,25 @@ footer {
   .faq-section-container {
     width: 95%;
     transition: 0s;
+    gap: 4rem;
+
+    header {
+      div {
+        gap: 2rem;
+      }
+    }
 
     .faq-section-content {
       transition: 0s;
-      gap: 1rem;
+      gap: 0rem;
 
       .card {
         flex: 1 1 calc(100% - 1rem);
-        height: 6rem;
+        height: 3rem;
         transition: 0;
         transition: 0s ease-in-out;
 
+        // background-color: red;
         p {
           display: none;
         }
@@ -560,12 +576,16 @@ footer {
             display: flex;
           }
         }
+
+        &:nth-of-type(5){
+          margin-bottom: 3.5rem;
+
+        }
       }
     }
   }
 
   footer {
-    // background-color: red;
     padding: 10rem 2rem 2rem 2rem; //top - right - botton - left
 
     header {
@@ -578,9 +598,8 @@ footer {
       div {
         width: 70%;
         display: flex;
-        align-items: start;
-        // background-color: red;
         flex-direction: column;
+        align-items: start;
         gap: .5rem;
 
         &:nth-of-type(3) {
@@ -608,7 +627,7 @@ footer {
 
     .lets-rock-the-future {
       padding: 5rem 1rem;
-      // background-color: red;
+
       display: flex;
       align-items: center;
       justify-content: center;
@@ -626,10 +645,7 @@ footer {
         -webkit-text-stroke-color: #fff;
         -webkit-background-clip: text;
 
-
-        // background: linear-gradient(90deg, transparent, white);
         background-clip: text;
-        // position: relative;
 
         animation: animateGradient 10s linear infinite;
 
