--- a/src/components/Styles.scss
+++ b/src/components/Styles.scss
@@ -2,20 +2,15 @@
 .header-container {
   width: 100vw;
   height: 5rem;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   overflow: hidden;
-
   position: fixed;
   top: 0;
   left: 0;
-
   z-index: 5;
-
   background-color: var(--header-background);
 
   .header-wrapper {
@@ -30,20 +25,17 @@
   .border {
     width: 100%;
     height: 2px;
-
     align-self: self-start;
-
     background-color: var(--color-pink);
   }
 }
 
+// Marquee
 .marquee-container {
   width: 100%;
   padding: 1rem 0;
-
   display: flex;
   gap: 3rem;
-
   overflow: hidden;
   white-space: nowrap;
 
@@ -51,13 +43,14 @@
     font-size: 48px;
     text-transform: uppercase;
     color: #fff;
-
-    white-space: 0 6rem;
+    white-space: nowrap;
     letter-spacing: 1px;
-    animation: 8000ms linear infinite;
+    animation: move-rtl 8000ms linear infinite;
+    animation-timeline: scroll();
   }
 }
 
+// Courses
 .courses-section-container {
   width: 80%;
   display: flex;
@@ -70,8 +63,12 @@
     justify-content: space-between;
 
     div {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
       h1 {
-        font-size: 5.75rem;
+        font-size: 4.688rem;
       }
 
       p {
@@ -90,7 +87,6 @@
           list-style: none;
           cursor: pointer;
           color: #8A959B;
-
           position: relative;
           transition: 0.5s;
 
@@ -98,7 +94,6 @@
             width: 0%;
             height: 6px;
             content: "";
-
             position: absolute;
             top: -10px;
             left: 0;
@@ -124,14 +119,11 @@
 
   .courses-section-content {
     width: 60%;
-
     display: flex;
     flex-direction: column;
 
     .categories {
-
       display: none;
-      // gap: 1rem;
       flex-direction: column;
 
       h1 {
@@ -141,24 +133,20 @@
 
       div {
         padding: 2rem 0;
-
-
         display: flex;
         align-items: center;
         gap: 2rem;
-
         position: relative;
 
         p {
           color: rgba(138, 149, 155, 1);
-
         }
 
-        :nth-child(1) {
+        &:nth-child(1) {
           font-family: var(--font-pt-sans);
         }
 
-        :nth-child(2) {
+        &:nth-child(2) {
           font-family: 'Gotham HTF', sans-serif;
           font-size: 0.813rem;
         }
@@ -166,9 +154,7 @@
         &::before {
           width: 100%;
           height: 1px;
-
           content: "";
-
           position: absolute;
           bottom: 5px;
           left: 0;
@@ -190,8 +176,6 @@
       &.visible {
         display: flex;
       }
-
-
     }
   }
 
@@ -200,6 +184,7 @@
   }
 }
 
+// FAQ
 .faq-section-container {
   width: 80%;
   display: flex;
@@ -214,9 +199,10 @@
     div {
       display: flex;
       flex-direction: column;
+      gap: 1rem;
 
       h1 {
-        font-size: 3.25rem;
+        font-size: 4.688rem;
       }
 
       p {
@@ -288,6 +274,7 @@
   }
 }
 
+// FOOTER
 footer {
   padding: 10rem 2rem 2rem 2rem; //top - right - botton - left
 
@@ -334,8 +321,9 @@ footer {
     h1 {
       font-size: 6rem;
       font-weight: 600;
-
-      background: linear-gradient(90deg, transparent, rgb(255, 255, 255), transparent);
+      text-align: center;
+      // background: linear-gradient(90deg, transparent, rgb(255, 255, 255), transparent);
+      background: linear-gradient(90deg, transparent, var(--color-pink));
       background-size: 400%;
       opacity: 0.5;
       letter-spacing: 7px;
