--- a/src/components/Styles.scss
+++ b/src/components/Styles.scss
@@ -274,6 +274,74 @@
   }
 }
 
+.navbar-container {
+  position: fixed;
+  top: 50%;
+  right: 2rem;
+  z-index: 100;
+  transform: translate(-50% 0);
+
+  ul {
+    padding: .6rem;
+    opacity: 0.4;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    a {
+      position: relative;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      background-color: var(--color-white);
+
+      overflow: visible;
+
+      li {
+        display: none;
+        transform: translateX(-4.3rem);
+        color: var(--color-pink);
+      }
+
+      &:hover {
+        background-color: var(--color-pink);
+
+        li {
+          display: flex;
+          // background-color: red;
+          text-align: end;
+        }
+
+        &::before {
+          animation: pulse 1.5s infinite;
+          border: 2px solid var(--color-pink);
+        }
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        border: 2px solid var(--color-white);
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    &:hover {
+      opacity: 1;
+    }
+
+  }
+}
+
 // FOOTER
 footer {
   padding: 10rem 2rem 2rem 2rem; //top - right - botton - left
@@ -313,7 +381,6 @@ footer {
 
   .lets-rock-the-future {
     padding: 5rem 1rem;
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -322,8 +389,7 @@ footer {
       font-size: 6rem;
       font-weight: 600;
       text-align: center;
-      // background: linear-gradient(90deg, transparent, rgb(255, 255, 255), transparent);
-      background: linear-gradient(90deg, transparent, var(--color-pink));
+      background: linear-gradient(90deg, transparent, var(--color-pink), transparent);
       background-size: 400%;
       opacity: 0.5;
       letter-spacing: 7px;
@@ -331,13 +397,25 @@ footer {
       -webkit-text-stroke-width: 1px;
       -webkit-text-stroke-color: #fff;
       -webkit-background-clip: text;
-
       background-clip: text;
-
       animation: animateGradient 10s linear infinite;
-
     }
   }
+
+  @keyframes animateGradient {
+    0% {
+      background-position: 0% 50%;
+    }
+
+    50% {
+      background-position: 100% 50%;
+    }
+
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+
 
   .footer {
     padding: 1rem;
@@ -377,19 +455,24 @@ footer {
   }
 }
 
-@keyframes animateGradient {
+/* Animação pulsante */
+@keyframes pulse {
   0% {
-    background-position: -0%;
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
   }
 
   50% {
-    opacity: 0.1;
+    transform: translate(-50%, -50%) scale(1.2);
+    opacity: 0.6;
   }
 
   100% {
-    background-position: 100%;
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
   }
 }
+
 
 // Estilos para dispositivos móveis com largura máxima de 900px
 @media(max-width: 900px) {
@@ -571,6 +654,10 @@ footer {
         }
       }
     }
+  }
+
+  .navbar-container{
+    display: none;
   }
 
   footer {
