feat: Update a `Styles.scss`

--- a/src/components/Styles.scss
+++ b/src/components/Styles.scss
@@ -389,9 +389,9 @@ footer {
       font-size: 6rem;
       font-weight: 600;
       text-align: center;
-      background: linear-gradient(90deg, transparent, var(--color-pink), transparent);
+      background: linear-gradient(90deg, transparent, var(--color-white), transparent);
       background-size: 400%;
-      opacity: 0.5;
+      opacity: 0.1;
       letter-spacing: 7px;
       color: transparent;
       -webkit-text-stroke-width: 1px;
